--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "framer-motion": "^10.12.4",
+    "kursor": "^0.1.6",
     "locomotive-scroll": "^4.1.4",
     "next": "13.3.1",
     "react": "18.2.0",
