--- a/package.json
+++ b/package.json
@@ -9,17 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-spring/parallax": "^9.7.2",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "framer-motion": "^10.12.4",
-    "kursor": "^0.1.6",
     "locomotive-scroll": "^4.1.4",
     "next": "13.3.1",
     "react": "18.2.0",
+    "react-animated-cursor": "^2.5.2",
     "react-dom": "18.2.0",
-    "react-scroll-parallax": "^3.4.2",
-    "react-spring": "^9.7.1",
-    "spltjs": "^1.1.0"
+    "react-spring": "^9.7.1"
   }
 }
