--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.66.6",
+    "@react-three/fiber": "^8.13.0",
+    "@types/three": "^0.152.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "framer-motion": "^10.12.4",
@@ -17,6 +20,7 @@
     "react": "18.2.0",
     "react-animated-cursor": "^2.5.2",
     "react-dom": "18.2.0",
-    "react-spring": "^9.7.1"
+    "react-spring": "^9.7.1",
+    "three": "^0.152.2"
   }
 }
