--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-animated-cursor": "^2.5.2",
     "react-dom": "18.2.0",
+    "react-social-icons": "^5.15.0",
     "react-spring": "^9.7.1"
   }
 }
